resources/SCC Project/cloudformation-SCC-Network-Splunk.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "AWS Cloudformation script to deploy Subnets, Route Tables, Security Groups and ACL's into a given VPC",
  "Parameters": {
    "VPCOctet": {
      "Description": "First two octets of the VPC",
      "Type": "String",
      "MinLength": "4",
      "MaxLength": "7",
      "AllowedPattern": "[0-9]{2,3}.[0-9]{1,3}",
      "ConstraintDescription": "must only be the first two octets without a trailing period"
    },
    "VpcId": {
      "Type": "String",
      "Description": "VpcId of your existing Virtual Private Cloud (VPC)"
    },
    "Name": {
      "Description": "Name TAG to allocate costs to",
      "Type": "String"
    },
    "Customer": {
      "Description" :"Customer TAG to allocate costs to",
      "Type": "String"
    },
    "Environment": {
      "Description" :"Environment TAG to allocate costs to",
      "Type": "String"
    },
    "Region": {
      "Default": "SYD",
      "Type": "String",
      "Description": "Region to deploy to.  First 3 letters of region in capitals, e.g. SYD, IRE"
    },
    "IGWID":{
      "Type":"String",
      "Description":"IGW ID for the VPC"
    }
  },
  "Mappings": {
    "SubnetConfig": {
      "SCCSplunkServersA": {
        "CIDR": "3.32/28"
      },
      "SCCSplunkServersB": {
        "CIDR": "3.48/28"
      }
    },
    "AvailabilityZones": {
      "ap-southeast-2": {
        "ZoneA": "ap-southeast-2a",
        "ZoneB": "ap-southeast-2b"
      },
      "eu-west-1": {
        "ZoneA": "eu-west-1a",
        "ZoneB": "eu-west-1b"
      }
    }
  },
  "Resources": {
    "sgSCCSplunk": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "SCC Custom Security Group",
        "VpcId": {
          "Ref": "VpcId"
        },
        "Tags": [
          {
            "Key": "Environment",
            "Value": {
              "Ref": "Environment"
            }
          },
          {
            "Key": "Name",
            "Value": {
              "Ref": "Name"
            }
          },
          {
            "Key": "Customer",
            "Value": {
              "Ref": "Customer"
            }
          }
        ]
      }
    },
    "sgSCCSplunkIngresssgSSH": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "DependsOn": "sgSCCSplunk",
      "Properties": {
        "GroupId": {
          "Ref": "sgSCCSplunk"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "sgSCCSplunkIngresssgHTTP": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "DependsOn": "sgSCCSplunk",
      "Properties": {
        "GroupId": {
          "Ref": "sgSCCSplunk"
        },
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "sgSCCSplunkIngresssgHTTPS": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "DependsOn": "sgSCCSplunk",
      "Properties": {
        "GroupId": {
          "Ref": "sgSCCSplunk"
        },
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "sgSCCSplunkIngresssgHighPorts": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "DependsOn": "sgSCCSplunk",
      "Properties": {
        "GroupId": {
          "Ref": "sgSCCSplunk"
        },
        "IpProtocol": "tcp",
        "FromPort": "1024",
        "ToPort": "65535",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "SubnetSCCSplunkServersA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": {
          "Fn::Join": [
            ".",
            [
              {
                "Ref": "VPCOctet"
              },
              {
                "Fn::FindInMap": [
                  "SubnetConfig",
                  "SCCSplunkServersA",
                  "CIDR"
                ]
              }
            ]
          ]
        },
        "AvailabilityZone": {
          "Fn::FindInMap": [
            "AvailabilityZones",
            {
              "Ref": "AWS::Region"
            },
            "ZoneA"
          ]
        },
        "VpcId": {
          "Ref": "VpcId"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "Name"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "Environment"
            }
          },
          {
            "Key": "Customer",
            "Value": {
              "Ref": "Customer"
            }
          }
        ]
      }
    },
    "SubnetSCCSplunkServersB": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": {
          "Fn::Join": [
            ".",
            [
              {
                "Ref": "VPCOctet"
              },
              {
                "Fn::FindInMap": [
                  "SubnetConfig",
                  "SCCSplunkServersB",
                  "CIDR"
                ]
              }
            ]
          ]
        },
        "AvailabilityZone": {
          "Fn::FindInMap": [
            "AvailabilityZones",
            {
              "Ref": "AWS::Region"
            },
            "ZoneB"
          ]
        },
        "VpcId": {
          "Ref": "VpcId"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "Name"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "Environment"
            }
          },
          {
            "Key": "Customer",
            "Value": {
              "Ref": "Customer"
            }
          }
        ]
      }
    },
    "SCCSplunkRouteTable":{
      "Type":"AWS::EC2::RouteTable",
      "Properties":{
        "VpcId":{
          "Ref":"VpcId"
        },
        "Tags": [
           {
            "Key": "Name",
            "Value": {
              "Ref": "Name"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "Environment"
            }
          },
          {
            "Key": "Customer",
            "Value": {
              "Ref": "Customer"
            }
          }
        ]
      }
    },
    "WebRoutetoIGW":{
      "Type":"AWS::EC2::Route",
      "Properties":{
        "DestinationCidrBlock":"0.0.0.0/0",
        "RouteTableId":{
          "Ref":"SCCSplunkRouteTable"
        },
        "GatewayId":{
          "Ref":"IGWID"
        }
      }
    },
    "SubnetSCCSplunkServersARouteTable" : {
      "Type" : "AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn" : "SCCSplunkRouteTable",
      "Properties" : {
        "SubnetId" : { "Ref" : "SubnetSCCSplunkServersA" },
        "RouteTableId" : { "Ref" : "SCCSplunkRouteTable" }
      }
    },
    "SubnetSCCSplunkServersBRouteTable" : {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn": "SCCSplunkRouteTable",
      "Properties": {
        "SubnetId": {
          "Ref": "SubnetSCCSplunkServersB"
        },
        "RouteTableId": {
          "Ref": "SCCSplunkRouteTable"
        }
      }
    },
    "SCCSplunkServersACL": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "VpcId"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "Name"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "Environment"
            }
          },
          {
            "Key": "Customer",
            "Value": {
              "Ref": "Customer"
            }
          }
        ]
      }
    },
    "AllowSCCSplunkServersACLSSH": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "PortRange": {
          "From": "22",
          "To": "22"
        },
        "NetworkAclId": {
          "Ref": "SCCSplunkServersACL"
        }
      }
    },
    "AllowSCCSplunkServersACLHTTP": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "110",
        "PortRange": {
          "From": "80",
          "To": "80"
        },
        "NetworkAclId": {
          "Ref": "SCCSplunkServersACL"
        }
      }
    },
    "AllowSCCSplunkServersACLHTTPS": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "120",
        "PortRange": {
          "From": "443",
          "To": "443"
        },
        "NetworkAclId": {
          "Ref": "SCCSplunkServersACL"
        }
      }
    },
    "AllowSCCSplunkServersACLHighPorts": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "130",
        "PortRange": {
          "From": "1024",
          "To": "65535"
        },
        "NetworkAclId": {
          "Ref": "SCCSplunkServersACL"
        }
      }
    },
    "AllowSCCSplunkServersACLLEgressSSH": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "PortRange": {
          "From": "22",
          "To": "22"
        },
        "NetworkAclId": {
          "Ref": "SCCSplunkServersACL"
        }
      }
    },
    "AllowSCCSplunkServersACLLEgressHTTP": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "110",
        "PortRange": {
          "From": "80",
          "To": "80"
        },
        "NetworkAclId": {
          "Ref": "SCCSplunkServersACL"
        }
      }
    },
    "AllowSCCSplunkServersACLEgressHTTPS": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "120",
        "PortRange": {
          "From": "443",
          "To": "443"
        },
        "NetworkAclId": {
          "Ref": "SCCSplunkServersACL"
        }
      }
    },
    "AllowSCCSplunkServersACLEgressHighPorts": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "130",
        "PortRange": {
          "From": "1024",
          "To": "65535"
        },
        "NetworkAclId": {
          "Ref": "SCCSplunkServersACL"
        }
      }
    },

    "AssocSCCSplunkServersAtoAdminACL": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "SCCSplunkServersACL"
        },
        "SubnetId": {
          "Ref": "SubnetSCCSplunkServersA"
        }
      }
    },
    "AssocSCCSplunkServersBtoAdminACL": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "SCCSplunkServersACL"
        },
        "SubnetId": {
          "Ref": "SubnetSCCSplunkServersB"
        }
      }
    }
  },
  "Outputs": {
    "SCCSplunkSecurityGroup": {
      "Value": {
        "Ref": "sgSCCSplunk"
      },
      "Description": "SCC Custom Server's Security Group"
    },
    "SCCSplunkServersRouteTable":{
      "Value": {
        "Ref": "SCCSplunkRouteTable"
      },
    "Description": "SCC Custom Server's Route Table"
    },
    "SCCSplunkServersACL":{
      "Value": {
        "Ref": "SCCSplunkServersACL"
    },
    "Description": "SCC Custom Server's ACL"
    },
    "SCCSplunkServersSubnetIDs": {
      "Value": {
        "Fn::Join": [
          ",",
          [
            {
              "Ref": "SubnetSCCSplunkServersA"
            },
            {
              "Ref": "SubnetSCCSplunkServersB"
            }
          ]
        ]
      },
      "Description": "Comma separated list of Web subnets"
    }
  }
}
