resources/SCC Project/cloudformation-SCC-Network-Web.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "AWS Cloudformation script to deploy Subnets, Route Tables, Security Groups and ACL's into a given VPC",
  "Parameters": {
    "VPCOctet": {
      "Description": "First two octets of the VPC",
      "Type": "String",
      "MinLength": "4",
      "MaxLength": "7",
      "AllowedPattern": "[0-9]{2,3}.[0-9]{1,3}",
      "ConstraintDescription": "must only be the first two octets without a trailing period"
    },
    "VpcId": {
      "Type": "String",
      "Description": "VpcId of your existing Virtual Private Cloud (VPC)"
    },
    "Name": {
      "Description": "Name TAG to allocate costs to",
      "Type": "String"
    },
    "Customer": {
      "Description" :"Customer TAG to allocate costs to",
      "Type": "String"
    },
    "Environment": {
      "Description" :"Environment TAG to allocate costs to",
      "Type": "String"
    },
    "Region": {
      "Default": "SYD",
      "Type": "String",
      "Description": "Region to deploy to.  First 3 letters of region in capitals, e.g. SYD, IRE"
    },
    "IGWID":{
      "Type":"String",
      "Description":"IGW ID for the VPC"
    }
  },
  "Mappings": {
  "SubnetConfig": {
      "SCCWebServersA": {
        "CIDR": "3.0/28"
      },
      "SCCWebServersB": {
        "CIDR": "3.16/28"
      }
    },
    "AvailabilityZones": {
      "ap-southeast-2": {
        "ZoneA": "ap-southeast-2a",
        "ZoneB": "ap-southeast-2b"
      },
      "eu-west-1": {
        "ZoneA": "eu-west-1a",
        "ZoneB": "eu-west-1b"
      }
    }
  },
  "Resources": {
    "sgSCCWeb": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "SCC Custom Security Group",
        "VpcId": {
          "Ref": "VpcId"
        },
        "Tags": [
          {
            "Key": "Environment",
            "Value": {
              "Ref": "Environment"
            }
          },
          {
            "Key": "Name",
            "Value": {
              "Ref": "Name"
            }
          },
          {
            "Key": "Customer",
            "Value": {
              "Ref": "Customer"
            }
          }
        ]
      }
    },
    "sgSCCWebIngresssgSSH": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "DependsOn": "sgSCCWeb",
      "Properties": {
        "GroupId": {
          "Ref": "sgSCCWeb"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "sgSCCIngressHTTP": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "DependsOn": "sgSCCWeb",
      "Properties": {
        "GroupId": {
          "Ref": "sgSCCWeb"
        },
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "sgSCCWebIngresssgHTTPS": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "DependsOn": "sgSCCWeb",
      "Properties": {
        "GroupId": {
          "Ref": "sgSCCWeb"
        },
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "sgSCCEgresssgHighPorts": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "DependsOn": "sgSCCWeb",
      "Properties": {
        "GroupId": {
          "Ref": "sgSCCWeb"
        },
        "IpProtocol": "tcp",
        "FromPort": "1024",
        "ToPort": "65535",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "SubnetSCCWebServersA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": {
          "Fn::Join": [
            ".",
            [
              {
                "Ref": "VPCOctet"
              },
              {
                "Fn::FindInMap": [
                  "SubnetConfig",
                  "SCCWebServersA",
                  "CIDR"
                ]
              }
            ]
          ]
        },
        "AvailabilityZone": {
          "Fn::FindInMap": [
            "AvailabilityZones",
            {
              "Ref": "AWS::Region"
            },
            "ZoneA"
          ]
        },
        "VpcId": {
          "Ref": "VpcId"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "Name"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "Environment"
            }
          },
          {
            "Key": "Customer",
            "Value": {
              "Ref": "Customer"
            }
          }
        ]
      }
    },
    "SubnetSCCWebServersB": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": {
          "Fn::Join": [
            ".",
            [
              {
                "Ref": "VPCOctet"
              },
              {
                "Fn::FindInMap": [
                  "SubnetConfig",
                  "SCCWebServersB",
                  "CIDR"
                ]
              }
            ]
          ]
        },
        "AvailabilityZone": {
          "Fn::FindInMap": [
            "AvailabilityZones",
            {
              "Ref": "AWS::Region"
            },
            "ZoneB"
          ]
        },
        "VpcId": {
          "Ref": "VpcId"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "Name"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "Environment"
            }
          },
          {
            "Key": "Customer",
            "Value": {
              "Ref": "Customer"
            }
          }
        ]
      }
    },
    "SCCWebRouteTable":{
      "Type":"AWS::EC2::RouteTable",
      "Properties":{
        "VpcId":{
          "Ref":"VpcId"
        },
        "Tags": [
           {
            "Key": "Name",
            "Value": {
              "Ref": "Name"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "Environment"
            }
          },
          {
            "Key": "Customer",
            "Value": {
              "Ref": "Customer"
            }
          }
        ]
      }
    },
    "WebRoutetoIGW":{
      "Type":"AWS::EC2::Route",
      "Properties":{
        "DestinationCidrBlock":"0.0.0.0/0",
        "RouteTableId":{
          "Ref":"SCCWebRouteTable"
        },
        "GatewayId":{
          "Ref":"IGWID"
        }
      }
    },
    "SubnetSCCWebServersARouteTable" : {
      "Type" : "AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn" : "SCCWebRouteTable",
      "Properties" : {
        "SubnetId" : { "Ref" : "SubnetSCCWebServersA" },
        "RouteTableId" : { "Ref" : "SCCWebRouteTable" }
      }
    },
    "SubnetSCCWebServersBRouteTable" : {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn": "SCCWebRouteTable",
      "Properties": {
        "SubnetId": {
          "Ref": "SubnetSCCWebServersB"
        },
        "RouteTableId": {
          "Ref": "SCCWebRouteTable"
        }
      }
    },
    "SCCWebServersACL": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "VpcId"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "Name"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "Environment"
            }
          },
          {
            "Key": "Customer",
            "Value": {
              "Ref": "Customer"
            }
          }
        ]
      }
    },
    "AllowSCCWebServersACLIngressSSH": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "PortRange": {
          "From": "22",
          "To": "22"
        },
        "NetworkAclId": {
          "Ref": "SCCWebServersACL"
        }
      }
    },
    "AllowSCCWebServersACLIngressHTTP": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "110",
        "PortRange": {
          "From": "80",
          "To": "80"
        },
        "NetworkAclId": {
          "Ref": "SCCWebServersACL"
        }
      }
    },
    "AllowSCCWebServersACLIngressHTTPS": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "120",
        "PortRange": {
          "From": "443",
          "To": "444"
        },
        "NetworkAclId": {
          "Ref": "SCCWebServersACL"
        }
      }
    },
    "AllowSCCWebServersACLIngressHighPorts": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "130",
        "PortRange": {
          "From": "1024",
          "To": "65535"
        },
        "NetworkAclId": {
          "Ref": "SCCWebServersACL"
        }
      }
    },
    "AllowSCCWebServersACLEgressSSH": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "PortRange": {
          "From": "22",
          "To": "22"
        },
        "NetworkAclId": {
          "Ref": "SCCWebServersACL"
        }
      }
    },
    "AllowSCCWebServersACLEgressHTTP": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "110",
        "PortRange": {
          "From": "80",
          "To": "80"
        },
        "NetworkAclId": {
          "Ref": "SCCWebServersACL"
        }
      }
    },
    "AllowSCCWebServersACLEgressHTTPS": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "120",
        "PortRange": {
          "From": "443",
          "To": "443"
        },
        "NetworkAclId": {
          "Ref": "SCCWebServersACL"
        }
      }
    },
    "AllowSCCWebServersACLEgressHighPorts": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "130",
        "PortRange": {
          "From": "1024",
          "To": "65535"
        },
        "NetworkAclId": {
          "Ref": "SCCWebServersACL"
        }
      }
    },
    "AssocSCCWebServersAtoAdminACL": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "SCCWebServersACL"
        },
        "SubnetId": {
          "Ref": "SubnetSCCWebServersA"
        }
      }
    },
    "AssocSCCWebServersBtoAdminACL": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "SCCWebServersACL"
        },
        "SubnetId": {
          "Ref": "SubnetSCCWebServersB"
        }
      }
    }
  },
  "Outputs": {
    "SCCWebSecurityGroup": {
      "Value": {
        "Ref": "sgSCCWeb"
      },
      "Description": "SCC Custom Server's Security Group"
    },
    "SCCWebServersRouteTable":{
      "Value": {
        "Ref": "SCCWebRouteTable"
      },
    "Description": "SCC Custom Server's Route Table"
    },
    "SCCWebServersACL":{
      "Value": {
        "Ref": "SCCWebServersACL"
    },
    "Description": "SCC Custom Server's ACL"
    },
    "SCCWebServersSubnetIDs": {
      "Value": {
        "Fn::Join": [
          ",",
          [
            {
              "Ref": "SubnetSCCWebServersA"
            },
            {
              "Ref": "SubnetSCCWebServersB"
            }
          ]
        ]
      },
      "Description": "Comma separated list of Web subnets"
    }
  }
}
